# mxcadviewer-cpp

./: CMakeLists.txt  LICENSE.txt  README.md
csharp/: MxCADViewWrapper.cs  MxCADWrapperLibPINVOKE.cs  README.md  test.cs
mx/: mx.cmake
mx/code/: download_address.txt
samples/cpp-src/: MxCADAppWrapper.cpp  MxCADAppWrapper.h  MxCADObjectWrapper.cpp  MxCADObjectWrapper.h  MxCADViewWrapper.cpp  MxCADViewWrapper.h
samples/csharp/: MxCADAppWrapper.cs  README.md
samples/java/: README.md  TestMxCAD.java
samples/java/com/mxcad/wrapper/: MxCADAppWrapper.java  MxCADObjectWrapper.java  MxCADWrapper.java  MxCADWrapperJNI.java
src/: ClickableLabel.cpp  ClickableLabel.h  MxAboutMeDialog.cpp  MxAboutMeDialog.h  MxCADViewer.cpp  MxCADViewer.h  MxCADViewer.rc  MxCADViewerBuildDate.h  MxCADViewerVersion.h  MxCADViewer_zh_CN.ts  MxLanguageManager.cpp  MxLanguageManager.h  MxLogger.cpp  MxLogger.h  MxMenu.cpp  MxMenu.h  MxProgressDialog.cpp  MxProgressDialog.h  MxRecentFile.cpp  MxRecentFile.h  MxRecentFileItem.cpp  MxRecentFileItem.h  MxRecentFileManager.cpp  MxRecentFileManager.h  MxRecentFileWidget.cpp  MxRecentFileWidget.h  MxSignalTransfer.cpp  MxSignalTransfer.h  MxUtils.cpp  MxUtils.h  MxViewToolBar.cpp  MxViewToolBar.h  images.qrc  images2d.qrc  images3d.qrc  main.cpp  resource.h  translations.qrc
src/mxcad2d/: AreaShapePreviewWidget.cpp  AreaShapePreviewWidget.h  ColorComboBox.cpp  ColorComboBox.h  ColorListDelegate.cpp  ColorListDelegate.h  CurveShape.cpp  CurveShape.h  DimCategoryData.h  DimCategoryDelegate.cpp  DimCategoryDelegate.h  DimPropertyData.h  DimPropertyDelegate.cpp  DimPropertyDelegate.h  DimPropertyFlag.h  KeyCaptureDelegate.cpp  KeyCaptureDelegate.h  Mx2dAnnotationEditor.cpp  Mx2dAnnotationEditor.h  Mx2dAnnotationFactory.cpp  Mx2dAnnotationFactory.h  Mx2dAnnotationSettingDialog.cpp  Mx2dAnnotationSettingDialog.h  Mx2dAreaOffsetDialog.cpp  Mx2dAreaOffsetDialog.h  Mx2dBatchExportPdfDialog.cpp  Mx2dBatchExportPdfDialog.h  Mx2dBatchExportPdfPreviewWidget.cpp  Mx2dBatchExportPdfPreviewWidget.h  Mx2dCalculateSideAreaDialog.cpp  Mx2dCalculateSideAreaDialog.h  Mx2dCompareSelDrawingDialog.cpp  Mx2dCompareSelDrawingDialog.h  Mx2dCustomAlignedDim.cpp  Mx2dCustomAlignedDim.h  Mx2dCustomAngleMeasurement.cpp  Mx2dCustomAngleMeasurement.h  Mx2dCustomAnnotation.cpp  Mx2dCustomAnnotation.h  Mx2dCustomArcLengthDim.cpp  (+106 more)
src/mxcad3d/: Mx3dBgColorManager.cpp  Mx3dBgColorManager.h  Mx3dBndBoxCoords.h  Mx3dCppUtils.h  Mx3dExplodeSlider.cpp  Mx3dExplodeSlider.h  Mx3dGuiDocument.cpp  Mx3dGuiDocument.h  Mx3dHandleHasher.h  Mx3dLabelHasher.h  Mx3dMeasureShape.h  Mx3dMeasureType.h  Mx3dProgressIndicator.cpp  Mx3dProgressIndicator.h  Mx3dSectionTools.cpp  Mx3dSectionTools.h  Mx3dSetBgColorDialog.cpp  Mx3dSetBgColorDialog.h  Mx3dSignalTransfer.cpp  Mx3dSignalTransfer.h  Mx3dSpan.h  Mx3dThumbnail.h  Mx3dTree.h  Mx3dUtils.cpp  Mx3dUtils.h  Mx3dViewer.cpp  Mx3dViewer.h  MxTreeWidget.cpp  MxTreeWidget.h
src/resources/occt_qt_licenses/: thirdPartySourceCodeLink.txt
src/resources/translations/: MxCADViewer_zh_CN.qm
